--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 /build
 /captures
 .externalNativeBuild
+build/
+gradle.properties
+gradlew
+gradlew.bat
+/.gradle/
+/.idea/
+/gradle/
+local.properties
